--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,8 +1,10 @@
 footer{background-color: #FFFFFF;
     height: 60px;
     width: 100%;
-    text-align: center;
+    align-items: center;
+	justify-content: center;
     position: fixed;
     bottom: 0;
-	border-top: 1px #CCCCCC;
+	display: flex;
+	border-top: 1px solid #CCCCCC;
 }
