--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,7 +1,10 @@
 header{background-color: #FFFFFF;
-    height: 60px;
+    height: 70px;
     width: 100%;
+	border-bottom: 1px solid #CCCCCC;
+	align-items: center;
+	display: flex;
+	background-image: url("../images/logo.png");
+	background-repeat: no-repeat;
 }
-logo{
 
-}
